database created in firebase and fetch into meals menu
more option will be added to create better user experience, next step is to create cart

--- a/app-file/src/Components/Nav/Nav.module.css
+++ b/app-file/src/Components/Nav/Nav.module.css
@@ -25,6 +25,11 @@
     height: 60vh;
     object-fit: cover;
 }
+@media screen and (min-width: 1200px) {
+    .hero img{
+        height: 70vh;
+    }
+}
 .navbar .cart__btn{
     display: flex;
     cursor: pointer;
